<resources>
    <string name="app_name">ChatApp</string>
    <string name="logout">Logout</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="already_registered">Already Registered? Click here to Login</string>
    <string name="login">Login</string>
    <string name="not_yet_registered">Not yet registered? Click here to Register</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="create_group">Create Group</string>
    <string name="title_activity_chat">ChatActivity</string>
</resources>
